CoreComm: implement getMemory/setMemory in Java
Move the memory copying from a JNI call to
Contiki-NG into Java.